--- a/puzzle/WebContent/nomalpuzzle.html
+++ b/puzzle/WebContent/nomalpuzzle.html
@@ -4,18 +4,64 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <style>
+.button {
+	  margin:0 auto;
+	  background-color: #4CAF50; /* Green */
+	  border: none;
+	  color: white;
+	  padding: 16px 32px;
+	  text-align: center;
+	  text-decoration: none;
+	  display: inline-block;
+	  font-size: 16px;
+	  margin: 4px 2px;
+	  -webkit-transition-duration: 0.4s; /* Safari */
+	  transition-duration: 0.4s;
+	  cursor: pointer;
+}
+.button5 {
+	  background-color: white;
+	  color: black;
+	  border: 2px solid #555555;
+}
+
+.button5:hover {
+	  background-color: #555555;
+	  color: white;
+}
 	table, td {border :1px solid gray;}
     table {border-collapse: collapse;}	
+.banner{
+	  background-image: url("gradient_bg.png");
+	  background-repeat: repeat-x;
+	  background-color: lightblue;
+	  height: 350px;	
+	  text-align: center;
+}
+.banner p{
+	  font-size:40px; 
+	 
 
+}
 </style>
 <script src="/puzzle/scripts/jquery-3.4.1.min.js"></script>
 </head>
 <body>
-	<h2>puzzle -<span id= "loginState"></span><span id="timer">0</span></h2>
-	<button id="logout" type="button">로그아웃</button>
-	<button id="hint" type="button">힌트</button>
-	<button id="home" type="button">홈으로</button>
-	<div class="border">
+
+<div class="banner">
+<br/>
+<h2>User Id : <span id="myid"></span></h2>
+<p>CARD GAME
+<h2>Time -<span id= "loginState"></span><span id="timer">0</span></h2>
+	<button id="logout" type="button" class="button button5">로그아웃</button>
+	<button id="hint" type="button" class="button button5">힌트</button>
+	<button id="home" type="button" class="button button5">홈으로</button>
+
+</p>
+<br/>
+</div>
+<br/><br/>
+	<div class="border" align="center">
 		
 	</div>
 
@@ -77,7 +123,7 @@
 			return false; 
 		}
 		//상단에 로그인 id표시
-		$("#loginState").text(loginState);		
+		$("#myid").text(loginState);		
 		
 		
 		$("#logout").click(function(){
