--- a/puzzle/WebContent/login.html
+++ b/puzzle/WebContent/login.html
@@ -1,12 +1,179 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+.banner{
+  background-image: url("gradient_bg.png");
+  background-repeat: repeat-x;
+  background-color: lightblue;
+  height: 300px;	
+  text-align: center;
+}
+.banner p{
+  font-size:50px; 
+  padding: 100px 0px;
+
+}
+body {
+	
+	font-family: arial;
+}
+.login-form h1 {
+	font-size: 36px;
+	text-align: center;
+	color: #45aba6;
+	margin-bottom: 30px;
+	font-weight: normal;
+}
+.login-form .social-icon {
+    width: 100%;
+    font-size: 20px;
+    padding-top: 20px;
+    color: #fff;
+    text-align: center;
+    float: left;
+}
+.login-form {
+    background: #607D8B;
+    width: 450px;
+    border-radius: 6px;
+    margin: 0 auto;
+    display: table;
+    padding: 15px 30px 30px;
+    box-sizing: border-box;
+}
+.form-group {
+	float: left;
+	width: 100%;
+	margin: 0 0 15px;
+	position: relative;
+}
+.login-form input {
+    width: 100%;
+    padding: 5px;
+    height: 56px;
+    border-radius: 74px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    font-size: 15px;
+    padding-left: 75px;
+}
+.login-form .form-group .input-icon {
+    font-size: 15px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    border-radius: 25px;
+    bottom: 0;
+    height: 100%;
+    padding-left: 35px;
+    color: #666;
+}
+.login-form .login-btn {
+	background: #45aba6;
+	padding: 11px 50px;
+	border-color: #45aba6;
+	color: #fff;
+	text-align: center;
+	margin: 0 auto;
+	font-size: 20px;
+	border: 1px solid #45aba6;
+	border-radius: 44px;
+	width: 100%;
+	height: 56px;
+	cursor: pointer;
+}
+.login-form .reset-psw {
+	float: left;
+	width: 100%;
+	text-decoration: none;
+	color: #45aba6;
+	font-size: 14px;
+	text-align: center;
+	margin-top: 11px;
+}
+.login-form .social-icon button {
+    font-size: 20px;
+    color: white;
+    height: 50px;
+    width: 50px;
+    background: #45aba6;
+    border-radius: 60%;
+    margin: 0px 10px;
+    border: none;
+    cursor: pointer;
+}
+.login-form button:hover{
+	opacity: 0.9;
+}
+.login-form .seperator {
+	float: left;
+	width: 100%;
+	border-top: 1px solid #ccc;
+	text-align: center;
+	margin: 50px 0 0;
+}
+.login-form .seperator b {
+	width: 40px;
+	height: 40px;
+	font-size: 16px;
+	text-align: center;
+	line-height: 40px;
+	background: #fff;
+	display: inline-block;
+	border: 1px solid #e0e0e0;
+	border-radius: 50%;
+	position: relative;
+	top: -22px;
+	z-index: 1;
+}
+.login-form p {
+	float: left;
+	width: 100%;
+	text-align: center;
+	font-size: 16px;
+	margin: 0 0 10px;
+}
+@media screen and (max-width:767px) {
+.login-form {
+    width: 90%;
+    padding: 15px 15px 30px;
+}
+}
+</style>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <script src="/puzzle/scripts/jquery-3.4.1.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
-		<h1>login</h1>
+<div class="banner">
+	<a href="/puzzle/index.html"><p>CARD GAME</p></a>
+
+</div>
+<br/><br/><br/>
+
+	<div class="login-form">
+		<form>
+			<h1>Login</h1>
+			<div class="form-group">
+				<input type="text" placeholder="ID" id="memberId">
+				<span class="input-icon"><i class="fa fa-envelope"></i></span>
+			</div>
+			<div class="form-group">
+				<input type="password" placeholder="Password" id="memberPw">
+				<span class="input-icon"><i class="fa fa-lock"></i></span>
+			</div>			
+			<button class="login-btn" id="loginBtn">Login</button>			
+			<a class="reset-psw" href="#" id="join">회원가입</a>
+		</form>
+		</div>
+		<!-- <h1>login</h1>
 		<table>
 			<tr>
 				<td>member_id</td>
@@ -19,7 +186,7 @@
 		</table>
 		<button id="loginBtn">login</button>
 		<button id="join">회원가입</button>
-		</body>
+		</body> -->
 <script>
 	$(document).ready(function(){
 		$("#loginBtn").click(function(){
